--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  		</nav>
  		<nav id="menu">
  			<ul>
- 				<li><a href="#">LOGIN</a></li>
+ 				<li><a href="login.html">LOGIN</a></li>
 
  			</ul>
  		</nav>
