--- a/login.html
+++ b/login.html
@@ -1,26 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-	<title>LOGIN	</title>
-	
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sistema de reservas - LOGIN</title>
+    <link rel="stylesheet" href="css/pages/home.css">
+    <link rel="stylesheet" media="Screen and (max-width: 700px)" href="css/mobile.css">
 </head>
 <body>
-	<div class="">
-		<div class = "form">
-		<h1>Login do Usuario</h1>
-		<form method="POST" action="login.php" id="formlogin" name="formlogin" class="login-form">
-			<input type="text" name="login" id="login" placeholder="matricula">
-			<input type="password" name="senha" id="senha" placeholder="senha" ">
+	<header id="header" class="page-home">
+        <div class="container">
+            <div class="row">
+                <div class="col col-4 col-mobile-6">
+                    <a href="index.html">
+                        <h3><img src="./imagens/uespi2.png"></h3>
+                    </a>
+                </div>
 
-			<br>
-			<button>login</button>
-		
-		</form>
+                <div class="col col-8 col-mobile-6">
+                    <nav>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="login.html" class="active">Login</a></li>
+                            <li><a href="#">Opção 2</a></li>
+                            <li><a href="#">Opção 3</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
 
-		</div>
+            <!--
+            <div class="row">
+                <div class="col col-12 title">
+                    <h1>Tabela de Itens</h1>
+                </div>
 
-	 </div>
+            </div>
+            -->
+        </div>    
+    </header>
 
+    <main>
+    	<section id="middle" class="section section-center">
+			<div class="container">
+				<div class = "form">
+					<h1>Login do Usuario</h1>
+					<form method="POST" action="login.php" id="formlogin" name="formlogin" class="login-form">
+						<div class="input-control">
+							<input type="text" name="login" id="login" placeholder="matricula">
+						</div>
+						<div class="input-control">
+							<input type="password" name="senha" id="senha" placeholder="senha" ">
+						</div>
+						<div class="input-control">
+							<input type="submit" name="Login" value="Login">
+						</div>
+					</form>
+				</div>
+			</div>
+		</section>
+	</main>
+ 	
+ 	<!--
+    <footer id="footer">
+
+        <div class="container">
+            <div class="row">
+                <div class="col col-offset-desktop-1 col-4 col-mobile-6">
+                   
+                </div>
+
+                <div class="col col-offset-desktop-1 col-3 col-mobile-2">
+                    <h3>Menu</h3>
+                    <nav>
+                        <ul>
+                            <li><a href="index.html" class="active">Home</a></li>
+                            <li><a href="login.html">Usúario</a></li>
+                            <li><a href="#">Opção 1</a></li>
+                            <li><a href="#">Opção 2</a></li>
+                        </ul>           
+                    </nav>
+                </div>
+
+            </div>
+        </div>
+
+    </footer>
+    -->
+
+
+    <div id="copyright">
+            &copy; UESPI - 2018 - Todos os direitos reservados
+    </div>
 
 </body>
 </html>
