--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <ul>
                             <li><a href="index.html" class="active">Home</a></li>
                             <li><a href="login.html">Login</a></li>
-                            <li><a href="pag_prefeitura.php">Menu Item</a></li>
+                            <li><a href="pag_prefeitura.php">Prefeitura</a></li>
                             <li><a href="#">Menu Item</a></li>
                         </ul>
                     </nav>
