--- a/base-pos-login.html
+++ b/base-pos-login.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sistema de reservas - LOGIN</title>
+    <title>Sistema de reservas - UESPI</title>
     <link rel="stylesheet" href="css/pages/home.css">
     <link rel="stylesheet" media="Screen and (max-width: 700px)" href="css/mobile.css">
 </head>
 <body>
-	<header id="header" class="page-home">
+    <header id="header" class="page-home">
         <div class="container">
             <div class="row">
                 <div class="col col-4 col-mobile-6">
-                    <a href="index.html.php">
+                    <a href="index.html">
                         <h3><img src="./imagens/uespi2.png"></h3>
                     </a>
                 </div>
@@ -21,8 +21,8 @@
                 <div class="col col-8 col-mobile-6">
                     <nav>
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="login.html" class="active">Login</a></li>
+                            <li><a href="#" class="active">Usuário</a></li>
+                            <li><a href="#">Opção 1</a></li>
                             <li><a href="#">Opção 2</a></li>
                             <li><a href="#">Opção 3</a></li>
                         </ul>
@@ -42,27 +42,39 @@
     </header>
 
     <main>
-    	<section id="middle" class="section section-center">
-			<div class="container">
-				<div class = "form">
-					<h1>Login do Usuario</h1>
-					<form method="POST" action="login.php" id="formlogin" name="formlogin" class="login-form">
-						<div class="input-control">
-							<input type="text" name="login" id="login" placeholder="matricula">
-						</div>
-						<div class="input-control">
-							<input type="password" name="senha" id="senha" placeholder="senha" ">
-						</div>
-						<div class="input-control">
-							<input type="submit" name="Login" value="Login">
-						</div>
-					</form>
-				</div>
-			</div>
-		</section>
-	</main>
- 	
- 	<!--
+        <section id="middle" class="section section-center">
+
+            <h2>Usuários</h2>
+            <p>Sistema pertecente ao Usuário</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col col-5 col-offset-desktop-1">
+                        <a href="#">Opções</a>                        
+                    </div>
+                    <div class="col col-5">
+                        <a href="#">Opções</a>
+                    </div>
+                </div>            
+        </section>
+
+         <section id="coachs" class="section section-center">
+
+            <h2>Usuários</h2>
+            <p>Sistema pertecente ao Usuário</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col col-5 col-offset-desktop-1">
+                        <a href="#">Opções</a>                        
+                    </div>
+                    <div class="col col-5">
+                        <a href="#">Opções</a>
+                    </div>
+                </div>            
+        </section>
+    </main>
+
+
+    <!--
     <footer id="footer">
 
         <div class="container">
@@ -93,7 +105,6 @@
     <div id="copyright">
             &copy; UESPI - 2018 - Todos os direitos reservados
     </div>
-
+    
 </body>
 </html>
-
