--- a/login.html
+++ b/login.html
@@ -21,47 +21,36 @@
                 <div class="col col-8 col-mobile-6">
                     <nav>
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html.php">Home</a></li>
                             <li><a href="login.html" class="active">Login</a></li>
-                            <li><a href="#">Opção 2</a></li>
-                            <li><a href="#">Opção 3</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
-
-            <!--
-            <div class="row">
-                <div class="col col-12 title">
-                    <h1>Tabela de Itens</h1>
-                </div>
-
-            </div>
-            -->
         </div>    
     </header>
 
     <main>
     	<section id="middle" class="section section-center">
-			<div class="container">
-				<div class = "form">
-					<h1>Login do Usuario</h1>
-					<form method="POST" action="login.php" id="formlogin" name="formlogin" class="login-form">
-						<div class="input-control">
-							<input type="text" name="login" id="login" placeholder="matricula">
-						</div>
-						<div class="input-control">
-							<input type="password" name="senha" id="senha" placeholder="senha" ">
-						</div>
-						<div class="input-control">
-							<input type="submit" name="Login" value="Login">
-						</div>
-					</form>
-				</div>
-			</div>
-		</section>
-	</main>
- 	
+         <div class="container">
+            <div class = "form">
+               <h1>Login do Usuario</h1>
+               <form method="POST" action="login.php" id="formlogin" name="formlogin" class="login-form">
+                  <div class="input-control">
+                     <input type="text" name="login" id="login" placeholder="matricula">
+                 </div>
+                 <div class="input-control">
+                     <input type="password" name="senha" id="senha" placeholder="senha" ">
+                 </div>
+                 <div class="input-control">
+                     <input type="submit" name="Login" value="Login">
+                 </div>
+             </form>
+         </div>
+     </div>
+ </section>
+</main>
+
  	<!--
     <footer id="footer">
 
@@ -87,12 +76,12 @@
         </div>
 
     </footer>
-    -->
+-->
 
 
-    <div id="copyright">
-            &copy; UESPI - 2018 - Todos os direitos reservados
-    </div>
+<div id="copyright">
+    &copy; UESPI - 2018 - Todos os direitos reservados
+</div>
 
 </body>
 </html>
