--- a/login.html
+++ b/login.html
@@ -21,8 +21,8 @@
                 <div class="col col-8 col-mobile-6">
                     <nav>
                         <ul>
-                            <li><a href="index.html.php">Home</a></li>
-                            <li><a href="login.html" class="active">Login</a></li>
+                            <li><a href="index.html.php">Página inicial</a></li>
+                            <li><a href="login.html" class="active">Entrar</a></li>
                         </ul>
                     </nav>
                 </div>
